<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Filmoteca de Albacete</string>

    <string name="warning_no_internet_connection">Debe tener activa la conexión a internet.
        \n¿Deseas acceder al menu de configuración?</string>
    <string name="warning_no_films_recived">
        No hay eventos disponibles para la Filmoteca de Albacete. Durante el més de agosto no hay programación.</string>
    <string name="image_title_desc">Imagen del título</string>
    <string name="image_search">Imagen del título</string>
    <string name="image_share">Imagen del título</string>
    <string name="image_navigator">Imagen del título</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more&#8230;</string>

    <!-- Menu -->
    <string name="share">Compartir</string>
    <string name="filmaffinity">Buscar en FilmAffinity</string>
    <string name="browser">Ver en el navegador</string>

    <!-- MoviesListActivity -->
    <string name="title_activity_main">Programación</string>

    <!-- DetailActivity -->
    <string name="error_no_internet">Debe tener activa una conexión a internet.</string>
    <string name="no_browser_found">Necesitas un navegador para poder ver la página.</string>

    <!-- Comments -->
    <string name="title_activity_comments">Comentarios</string>
    <string name="error_empty_message">Escribe tu mensaje</string>
    <string name="hint_message">¿Que tal la peli?</string>
    <string name="error_cant_get_twitter_guest_session">No se han podido iniciar la sesión de invitado. Inicie sesión con su cuenta de twitter.</string>
    <string name="error_cant_verify_credentials">No se ha podido obtener la información de usuario, por favor, inicie de nuevo la sesión.</string>
    <string name="error_cant_load_tweets">No se han podido cargar los tweets, inténtelo de nuevo más tarde o inicie sesión con su cuenta de twitter.</string>
    <string name="error_cant_login">No se han podido iniciar la sesión</string>
    <string name="error_cant_post_tweet">No se ha podido enviar el mensaje</string>

    <!-- Menu -->
    <string name="refresh">Actualizar</string>

    <!-- About us -->
    <string name="about_us">Acerca de…</string>
    <string name="developby">Desarrollado por:</string>
    <string name="albandroid">Asociación Juvenil Albandroid</string>
    <string name="web">http://www.albandroid.es</string>
    <string name="email">albaceteandroid@gmail.com</string>
    <string name="findus">Escuela de Ingenieros Industriales - Aula 1.6</string>
    <string name="version_code">version %d</string>

    <!-- Share -->
    <string name="share_date">Fecha</string>
    <string name="share_subject">Filmoteca de Albacete</string>
    <string name="share_message">Voy a ir a la Filmoteca a ver:\nTítulo:</string>

    <!-- Dialog -->
    <string name="dialog_title">Información</string>
    <string name="loading">Cargando…</string>
    <string name="timeout_dialog_message">No ha sido posible obtener la información, inténtelo de nuevo mas tarde.</string>
    <string name="dialog_accept">Aceptar</string>
    <string name="dialog_cancel">Cancelar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- Notifications -->
    <string name="notification_title_normal">Filmoteca de Albacete</string>
    <string name="notification_message_new_movies">Hay nuevas películas en cartelera. Échale un vistazo.</string>
</resources>