<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:filmoteca="http://schemas.android.com/apk/res-auto" >

    <group android:id="@+id/group1">
        <item android:id="@+id/menu_item_browser"
            android:title="@string/browser"
            android:icon="@drawable/ic_google_chrome"
            filmoteca:showAsAction="always" />
        <item android:id="@+id/menu_item_filmaffinity"
            android:title="@string/filmaffinity"
            android:icon="@drawable/ic_movie"
            filmoteca:showAsAction="always" />
        <item android:id="@+id/menu_item_share"
            android:title="@string/share"
            android:icon="@drawable/ic_share"
            filmoteca:showAsAction="always" />
    </group>

    <item android:id="@+id/menu_item_refresh"
        android:title="@string/refresh" />
    <item android:id="@+id/menu_item_about_us"
        android:title="@string/about_us" />

</menu>