<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_about_us_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    android:paddingBottom="50dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:orientation="vertical"
    android:background="#80000000" >
    <LinearLayout
        android:id="@+id/layout_about_us_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white" >
        <LinearLayout
            android:id="@+id/infoCreditosTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:background="@color/color_primary">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding = "20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developby"
                android:textColor="@color/texto_oscuro" >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/albandroid"
                android:textColor="@color/texto_oscuro" android:textStyle="bold">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/texto_oscuro" >
            </TextView>

        </LinearLayout>

        <ImageView
            android:id="@+id/albandroidLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/image_title_desc"
            android:src="@drawable/creditos" />
    </LinearLayout>

</LinearLayout>